Fri Jun  9 17:51:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added lock() and unlock() methods to databases.

	* Added LOCK and API debug types.

	* Added new exception: OmDatabaseLockError.

	* Added type for timeout times: om_timeout.

Fri Jun  9 16:09:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stemming interface working with tcl8, and guile (but with some
	  tweaks to the generated code.).

Thu Jun  8 18:59:55 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Initial guile bits.  (Not yet functional)

Thu Jun  8 16:28:07 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Perl5 and Python now both have more-or-less working OmQuery
	  interface.
	
	* Both interfaces can be built from the Makefiles (still more work
	  getting it working properly with automake and autoconf.
	
	* The "perl" directory has been renamed to "perl5".

Thu Jun  8 14:43:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Create an OmDebug object to manage debug messages.  This allows
	  the level of debug message to be selected and the output file for
	  debug messages to be set using OM_DEBUG_FILE and OM_DEBUG_TYPES
	  environment variables.

Thu Jun  8 11:32:11 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed some warnings from BackendManager.

Wed Jun  7 18:26:17 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug in Muscat3.6 backends causing an Assertion to fail when
	  the termfrequency of a term not in the database was requested
	  (should have returned 0).

Wed Jun  7 18:08:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More work on scripting languages.  OmQuery _nearly_ works with
	  python.

Wed Jun  7 18:06:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Hopefully fixed a nasty refcount pointer bug.

Wed Jun  7 15:40:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.2.0
